<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ll_tools"
        app:layout_constraintTop_toBottomOf="@id/cl_title">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ScrollView
            android:id="@+id/scv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fl_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <middle.goose.richtext.RichEditText
                    android:id="@+id/ret_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="500dp"
                    android:background="@null"
                    android:hint="@string/content"
                    android:inputType="textMultiLine"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:bulletGapWidth="8dp"
                    app:bulletRadius="3dp"
                    app:quoteCapWidth="4dp"
                    app:quoteStripeWidth="8dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/iv_undo"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/redo"
        android:src="@drawable/icon_undo"
        app:layout_constraintBottom_toTopOf="@id/ll_tools"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/iv_redo"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/undo"
        android:src="@drawable/icon_redo"
        app:layout_constraintBottom_toTopOf="@id/ll_tools"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_tools"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_note">

        <!--        <ImageButton-->
        <!--            android:id="@+id/iv_quote"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:background="?android:attr/selectableItemBackgroundBorderless"-->
        <!--            android:src="@drawable/icon_quote_black"-->
        <!--            tools:ignore="ContentDescription" />-->

        <!--        <ImageButton-->
        <!--            android:id="@+id/iv_bullet"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:background="?android:attr/selectableItemBackgroundBorderless"-->
        <!--            android:src="@drawable/icon_bullet_black"-->
        <!--            tools:ignore="ContentDescription" />-->

        <ImageButton
            android:id="@+id/iv_underline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/underline"
            android:src="@drawable/icon_underline_black" />

        <ImageButton
            android:id="@+id/iv_sweep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sweep"
            android:src="@drawable/icon_sweep_black" />

        <ImageButton
            android:id="@+id/iv_italics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/italic"
            android:src="@drawable/icon_italics_black" />

        <ImageButton
            android:id="@+id/iv_bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bold"
            android:src="@drawable/icon_bold_black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>